[gd_scene load_steps=7 format=3 uid="uid://omrtix6u2rio"]

[ext_resource type="PackedScene" uid="uid://bguor85aae6di" path="res://Assets/models/well.fbx" id="1_npsd0"]
[ext_resource type="Script" path="res://Assets/objects/well.gd" id="2_b7kp6"]
[ext_resource type="PackedScene" uid="uid://cj21mt7xup5c7" path="res://Assets/objects/key.tscn" id="3_lgdgg"]
[ext_resource type="PackedScene" uid="uid://bcnlcvmyy0x15" path="res://Assets/models/bucket_model.tscn" id="4_uxdah"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_idqdj"]
height = 8.0
radius = 3.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u0we1"]
height = 6.45142
radius = 3.68925

[node name="well" instance=ExtResource("1_npsd0")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("2_b7kp6")

[node name="WellBody_001" parent="RootNode" index="0"]
transform = Transform3D(2.44763e-06, -41.0645, -1.22382e-06, 1.22382e-06, 0, 41.0645, -41.0645, -1.22382e-06, 2.44763e-06, 0, 1.38, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="RootNode/WellBody_001" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 1.77636e-15, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RootNode/WellBody_001/StaticBody3D" index="0"]
transform = Transform3D(7.25745e-10, 1.45149e-09, -0.024352, -0.024352, -7.25744e-10, -1.45149e-09, -2.16289e-17, 0.024352, 7.25745e-10, 3.22848e-09, -1.61424e-09, 0.0541649)
shape = SubResource("CylinderShape3D_idqdj")

[node name="well_area" type="Area3D" parent="." index="1"]

[node name="well_collider" type="CollisionShape3D" parent="well_area" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.202343)
shape = SubResource("CylinderShape3D_u0we1")

[node name="Key" parent="." index="2" instance=ExtResource("3_lgdgg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.998488, 3.22247, -2.29218)
visible = false

[node name="Bucket_model" parent="." index="3" instance=ExtResource("4_uxdah")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0.284817, 3.248, -2.19968)
visible = false

[connection signal="body_entered" from="well_area" to="." method="_on_well_area_body_entered"]
[connection signal="body_exited" from="well_area" to="." method="_on_well_area_body_exited"]
